# gRPCTest

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  main.cpp
conan/: CMakePresets.json  FindOpenSSL.cmake  FindProtobuf.cmake  OpenSSL-release-x86_64-data.cmake  OpenSSLConfig.cmake  absl-Target-release.cmake  absl-config-version.cmake  absl-config.cmake  absl-release-x86_64-data.cmake  c-ares-Target-release.cmake  c-ares-config-version.cmake  c-ares-config.cmake  c-ares-release-x86_64-data.cmake  c-aresTargets.cmake  conan_toolchain.cmake  conandeps_legacy.cmake  conanfile.txt  conanrunenv-release-x86_64.bat  gRPC-Target-release.cmake  gRPC-release-x86_64-data.cmake  gRPCConfig.cmake  gRPCConfigVersion.cmake  gRPCTargets.cmake  module-OpenSSL-release-x86_64-data.cmake  module-Protobuf-release-x86_64-data.cmake  module-ZLIB-release-x86_64-data.cmake  protobuf-config.cmake  protobuf-release-x86_64-data.cmake  re2-Target-release.cmake  re2-config-version.cmake  re2-config.cmake  re2-release-x86_64-data.cmake
grpc-packages/OpenSSL-windows/: FindOpenSSL.cmake  PackageInfo.json  SHA256SUMS
grpc-packages/absl-20240116-windows/: Findabsl.cmake  PackageInfo.json
grpc-packages/absl-windows/: PackageInfo.json
grpc-packages/c-ares-1.28.1-windows/: Findcares.cmake  PackageInfo.json
grpc-packages/c-ares-windows/: Findcares.cmake  PackageInfo.json
grpc-packages/cares-1.28.1-windows/: Findcares.cmake  PackageInfo.json
grpc-packages/gflags-2.2.2-windows/: PackageInfo.json
grpc-packages/gflags-windows/: Findgflags.cmake  PackageInfo.json
grpc-packages/grpc-1.51.1-windows/: Findgrpc.cmake  PackageInfo.json
grpc-packages/grpc-windows/: Findgrpc.cmake  PackageInfo.json
grpc-packages/openssl-3.3.0-windows/: Findopenssl.cmake  PackageInfo.json
grpc-packages/protobuf-3.21.12-windows/: Findprotobuf.cmake  PackageInfo.json
grpc-packages/protobuf-windows/: Findprotobuf.cmake  PackageInfo.json
grpc-packages/re2-2024-04-01-windows/: Findre2.cmake  PackageInfo.json
grpc-packages/re2-windows/: Findre2.cmake  PackageInfo.json
grpc-packages/upb-2022-06-21-windows/: Findupb.cmake  PackageInfo.json
grpc-packages/upb-windows/: PackageInfo.json
grpc-packages/zlib-1.3.1-windows/: Findzlib.cmake  PackageInfo.json
src/: CMakeLists.txt  cpp_greet_service.cpp  cpp_greet_service.h  grpc_test.cpp  grpc_test.py  python_client.ipynb
src/protos/: CMakeLists.txt  message.proto
